# zippergen

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD-PARTY-LICENSES  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml  test.yml
demo/: build.py  scenario.py
deploy/: zippergen@.service
deploy/launchd/: com.zippergen.telegram-notifier.plist  com.zippergen.workflow.plist
deploy/systemd/: zippergen-telegram-notifier.service  zippergen-workflow.service
docs/: local-deployment.md  workflow-development-deployment-guide.tex
examples/: arithmetic_planner.py  arithmetic_planner_experiment.py  assistant_maintenance.py  call_intake.py  call_intake_email_client.py  call_intake_sheets_client.py  command_center.py  contract_review.py  coregion.py  cpl_test.py  dashboard.py  debate.py  diagnosis.py  field_terms.py  gmail_client.py  google_calendar_client.py  google_chat_client.py  google_tasks_client.py  hello.py  hello_world.py  human_approval.py  increment.py  local_approval_deployment.py  morning_digest.py  naive_orchestration_demo.py  nested.py  nested_dashboard.py  parallel.py  parallel_crossing.py  parallel_cyclic.py  personal_assistant.py  planner.py  reviewed_execution.py  self_message.py  smoke_parallel_while.py  telegram_client.py  temporal_guard.py  tutorial_review.py  write_tweet.py  write_tweet_local.py
examples/prompts/: update_release_notes.md
prompts/: reviewed_answer.md  reviewed_answer_refinement.md
skills/zippergen-workflows/: SKILL.md
src/zipperchat/: __init__.py  web.py
src/zippergen/: __init__.py  actions.py  assistant_backends.py  (+25 more)
tests/: loop_fixture.py  test_assistant_actions.py  test_backends.py  test_builder.py  test_call_intake_example.py  test_channels.py  test_cli.py  test_control_tag_stable.py  test_deploy_integration.py  test_deployment.py  test_dev.py  test_examples_regression.py  test_formula.py  test_human_action.py  test_locator.py  test_monitor.py  test_planner_execution.py  test_planner_validation.py  test_projection.py  test_runtime.py  test_semantic.py  test_serve_journal.py  test_serve_replay.py  test_snapshots.py  test_sqlite_runner.py  test_store.py  test_studio.py  test_studio_language.py  test_syntax.py  test_telegram_notify.py  test_tutorial_review.py  test_view.py  test_webtrace.py  test_workspace.py
(+15 files in other folders)
