[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zippergen"
version = "0.1.0a2"
description = "Python DSL and runtime for structured multi-agent coordination"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD-PARTY-LICENSES"]
authors = [
  { name = "The ZipperGen Authors" }
]
keywords = ["agents", "llm", "coordination", "protocols", "msc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/zippergen-io/zippergen"
Repository = "https://github.com/zippergen-io/zippergen"

[project.scripts]
zippergen = "zippergen.serve:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["zippergen*", "zipperchat*"]

[tool.setuptools.package-data]
zipperchat = ["assets/*"]
